# prog-dev

./: .gitmodules  CONTRIBUTING.md  README.md
.github/workflows/: helloAction.yml
CMake_Examples/: README.md
CMake_Examples/1 Basics/: README.md
CMake_Examples/2 Variables_Cache/: CMakeLists.txt  README.md
CMake_Examples/3 Programming in CMake/: README.md
CMake_Examples/Basics/: CMakeLists.txt  README.md
CMake_Examples/Basics/apps/: calc.cpp
CMake_Examples/Basics/src/: calclib.cpp
CPlusPlus/1_Why_CPlusPlus/: Abstractions.cpp  CMakeLists.txt  Heap_Allocations.cpp  README.md  Value_Semantics.cpp
Github_actions/: hello  hello.cpp  helloTest
Machine_Learning/1_End_To_End_Example/: Housing.py  README.md
Testing/: README.md
Testing/TDD/: CMakeLists.txt  README.md  SoundexTest.cpp  SoundexTest.h
Testing/TDD/2_TDD_Foundations/: README.md
Testing/gtest/: README.md
matplotlib_cpp/: CMakeLists.txt  README.md  example2.cpp  example3.cpp
